--- a/public/views/personage_logic/derivatives_characteristics.html
+++ b/public/views/personage_logic/derivatives_characteristics.html
@@ -1,85 +1,80 @@
-<div class="panel widget widget-five">
-    <h3 class="widget-header">Производные характеристики</h3>
-    <div class="widget-body row text-center">
-        <div class="icons-block">
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
-                    <img src="/assets/common/img/erilon-icon/hitPiercePunch.svg" class="ng-scope" height="40"
-                         width="40">
-                    <span class="ng-binding ng-scope">{{hitPiercePunch}}</span>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа">
-                    <img src="/assets/common/img/erilon-icon/hitChopPunch.svg" class="ng-scope" height="40"
-                         width="40">
-                    <span class="ng-binding ng-scope">{{hitChopPunch}}</span>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания при стрельбе из луков, арбалетов и использовании метательного оружия. Равно ловкости+восприятию персонажа">
-                    <img src="/assets/common/img/erilon-icon/rangedHit.svg" class="ng-scope" height="40" width="40">
-                    <span class="ng-binding ng-scope">{{rangedHit}}</span>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
-                    <img src="/assets/common/img/erilon-icon/parryPiercePunch.svg" class="ng-scope" height="40"
-                         width="40">
-                    <span class="ng-binding ng-scope">{{parryPiercePunch}}</span>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
-                    <img src="/assets/common/img/erilon-icon/parryChopPunch.svg" class="ng-scope" height="40"
-                         width="40">
-                    <span class="ng-binding ng-scope">{{parryChopPunch}}</span>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
-                    <img src="/assets/common/img/erilon-icon/dodge.svg" class="ng-scope" height="40" width="40">
-                    <span class="ng-binding ng-scope">{{dodge}}</span>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
-                    <img src="/assets/common/img/erilon-icon/generalActionPoints.svg" class="ng-scope" height="40"
-                         width="40">
-                    <span class="ng-binding ng-scope">{{generalActionPoints}}</span>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
-                    <img src="/assets/common/img/erilon-icon/mentalActionPoints.png" class="ng-scope" height="40"
-                         width="40">
-                    <span class="ng-binding ng-scope">{{mentalActionPoints}}</span>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
-                    <img src="/assets/common/img/erilon-icon/endurancePoints.svg" class="ng-scope" height="40"
-                         width="40">
-                    <span class="ng-binding ng-scope">{{endurancePoints}}</span>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-12 col-xs-12" style="cursor: pointer;">
-                <div class="tooltips icon-atr"
-                     title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
-                    <img src="/assets/common/img/erilon-icon/initiative.svg" class="ng-scope" height="40"
-                         width="40">
-                    <span class="ng-binding ng-scope">{{initiative}}</span>
-                </div>
-            </div>
+<div class="icons-block">
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+            <img src="/assets/common/img/erilon-icon/hitPiercePunch.svg" class="ng-scope tooltips" height="40"
+                 width="40">
+            <span class="ng-binding ng-scope">{{hitPiercePunch}}</span>
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа">
+            <img src="/assets/common/img/erilon-icon/hitChopPunch.svg" class="ng-scope tooltips" height="40"
+                 width="40">
+            <span class="ng-binding ng-scope">{{hitChopPunch}}</span>
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания при стрельбе из луков, арбалетов и использовании метательного оружия. Равно ловкости+восприятию персонажа">
+            <img src="/assets/common/img/erilon-icon/rangedHit.svg" class="ng-scope tooltips" height="40" width="40">
+            <span class="ng-binding ng-scope">{{rangedHit}}</span>
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+            <img src="/assets/common/img/erilon-icon/parryPiercePunch.svg" class="ng-scope tooltips" height="40"
+                 width="40">
+            <span class="ng-binding ng-scope">{{parryPiercePunch}}</span>
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+            <img src="/assets/common/img/erilon-icon/parryChopPunch.svg" class="ng-scope tooltips" height="40"
+                 width="40">
+            <span class="ng-binding ng-scope">{{parryChopPunch}}</span>
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+            <img src="/assets/common/img/erilon-icon/dodge.svg" class="ng-scope tooltips" height="40" width="40">
+            <span class="ng-binding ng-scope">{{dodge}}</span>
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+            <img src="/assets/common/img/erilon-icon/generalActionPoints.svg" class="ng-scope tooltips" height="40"
+                 width="40">
+            <span class="ng-binding ng-scope">{{generalActionPoints}}</span>
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+            <img src="/assets/common/img/erilon-icon/mentalActionPoints.png" class="ng-scope tooltips" height="40"
+                 width="40">
+            <span class="ng-binding ng-scope">{{mentalActionPoints}}</span>
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+            <img src="/assets/common/img/erilon-icon/endurancePoints.svg" class="ng-scope tooltips" height="40"
+                 width="40">
+            <span class="ng-binding ng-scope">{{endurancePoints}}</span>
+        </div>
+    </div>
+    <div class="col-md-12 col-sm-12 col-xs-12 text-center" style="cursor: pointer">
+        <div class="icon-atr"
+             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+                <img src="/assets/common/img/erilon-icon/initiative.svg" class="ng-scope tooltips" height="40"
+                 width="40">
+                <span class="ng-binding ng-scope">{{initiative}}</span>
         </div>
     </div>
 </div>
