--- a/public/views/personage_logic/derivatives_characteristics.html
+++ b/public/views/personage_logic/derivatives_characteristics.html
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
         <div class="icon-atr"
-             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+             title="Количество кубиков на парирование колющих/режущих ударов. Равно скорости+реакции персонажа">
             <img src="/assets/common/img/erilon-icon/parryPiercePunch.svg" class="ng-scope tooltips" height="40"
                  width="40">
             <span class="ng-binding ng-scope">{{parryPiercePunch}}</span>
@@ -32,7 +32,7 @@
     </div>
     <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
         <div class="icon-atr"
-             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+             title="Количество кубиков на парирование рубящего удара. Равно силе+реакции персонажа">
             <img src="/assets/common/img/erilon-icon/parryChopPunch.svg" class="ng-scope tooltips" height="40"
                  width="40">
             <span class="ng-binding ng-scope">{{parryChopPunch}}</span>
@@ -40,14 +40,14 @@
     </div>
     <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
         <div class="icon-atr"
-             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+             title="Количество кубиков на уклонение от атак. Равно ловкости+реакции персонажа">
             <img src="/assets/common/img/erilon-icon/dodge.svg" class="ng-scope tooltips" height="40" width="40">
             <span class="ng-binding ng-scope">{{dodge}}</span>
         </div>
     </div>
     <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
         <div class="icon-atr"
-             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+             title="Количество физических действий, совершаемых в раунд (удары, парирование, уклонение). Равно меньшему значению из скорости и интеллекта персонажа">
             <img src="/assets/common/img/erilon-icon/generalActionPoints.svg" class="ng-scope tooltips" height="40"
                  width="40">
             <span class="ng-binding ng-scope">{{generalActionPoints}}</span>
@@ -55,7 +55,7 @@
     </div>
     <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
         <div class="icon-atr"
-             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+             title="Количество ментальных действий, совершаемых в раунд (активация способностей). Равно интеллекту персонажа">
             <img src="/assets/common/img/erilon-icon/mentalActionPoints.png" class="ng-scope tooltips" height="40"
                  width="40">
             <span class="ng-binding ng-scope">{{mentalActionPoints}}</span>
@@ -63,7 +63,7 @@
     </div>
     <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="cursor: pointer;">
         <div class="icon-atr"
-             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+             title="Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20">
             <img src="/assets/common/img/erilon-icon/endurancePoints.svg" class="ng-scope tooltips" height="40"
                  width="40">
             <span class="ng-binding ng-scope">{{endurancePoints}}</span>
@@ -71,7 +71,7 @@
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12 text-center" style="cursor: pointer">
         <div class="icon-atr"
-             title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа">
+             title="Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа">
                 <img src="/assets/common/img/erilon-icon/initiative.svg" class="ng-scope tooltips" height="40"
                  width="40">
                 <span class="ng-binding ng-scope">{{initiative}}</span>
