--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -124,7 +124,7 @@
             <div class="left-menu-inner scroll-pane">
                 <ul class="left-menu-list left-menu-list-root list-unstyled">
                     <li>
-                        <a class="left-menu-link" href="/views/races/race_manager.html" >
+                        <a class="left-menu-link" href="/views/races/race_manager.html">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
                             Расы
                         </a>
@@ -183,7 +183,8 @@
             <div class="menu">
                 <div class="menu-user-block">
                     <div class="dropdown dropdown-avatar">
-                        <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                        <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown"
+                           aria-expanded="false">
                             <span class="user-name">Игрок: <strong>{{player.name}}</strong></span>
                             <span class="avatar" href="profile.html">
                         <img src="/assets/common/img/temp/avatars/4.jpg" alt="Alternative text to the image">
@@ -192,11 +193,15 @@
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
                             <a class="dropdown-item" href="profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
+                            <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
+                                    class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i class="dropdown-icon icmn-exit"></i> Сменить персонажа</a>
+                            <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
+                                    class="dropdown-icon icmn-exit"></i> Сменить персонажа</a>
                             <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
-                            <a class="dropdown-item" href="/" ng-click="deleteUserCookie()" ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i> Управление доступом</a>
+                            <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"
+                               ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i> Управление
+                                доступом</a>
                         </ul>
                     </div>
                 </div>
@@ -218,96 +223,95 @@
     </div>
 
     <section class="page-content" ng-controller="personageController">
-        <div data-ng-include data-src="'/views/loader.html'"></div>
         <div class="page-content-inner">
             <div class="dashboard-container">
                 <div class="row">
-            <div class="panel panel-with-sidebar sidebar-large panel-with-borders" style="width: 99.2%;">
-                <h4 class="panel-sidebar">
-                    <dl>
-                        <dt>
-                            <strong>Раса: </strong>{{personage.Race.name}}
-                        </dt>
-                        <br/>
-                        <br/>
-                        <dt>
-                            <strong>Возраст: </strong>{{personage.age}} лет
-                        </dt>
-                        <br/>
-                        <br/>
-                        <dt>
-                            <strong>Макс. возраст: </strong>{{personage.max_age}} лет
-                        </dt>
-                        <br/>
-                        <br/>
-                        <dt>
-                            <strong>Очки опыта: </strong>{{personage.experience}}
-                        </dt>
-                    </dl>
-                </h4>
-                <h3 class="panel-heading">{{personage.name}}</h3>
-                <div class="panel-body">
+                    <div class="panel panel-with-sidebar sidebar-large panel-with-borders" style="width: 99.2%;">
+                        <h4 class="panel-sidebar">
+                            <dl>
+                                <dt>
+                                    <strong>Раса: </strong>{{personage.Race.name}}
+                                </dt>
+                                <br/>
+                                <br/>
+                                <dt>
+                                    <strong>Возраст: </strong>{{personage.age}} лет
+                                </dt>
+                                <br/>
+                                <br/>
+                                <dt>
+                                    <strong>Макс. возраст: </strong>{{personage.max_age}} лет
+                                </dt>
+                                <br/>
+                                <br/>
+                                <dt>
+                                    <strong>Очки опыта: </strong>{{personage.experience}}
+                                </dt>
+                            </dl>
+                        </h4>
+                        <h3 class="panel-heading">{{personage.name}}</h3>
+                        <div class="panel-body">
                             <div data-ng-include data-src="'derivatives_characteristics.html'"></div>
-                </div>
+                        </div>
 
-            </div>
-                </div>
-
-            <div class="row masonry" id="personage_table">
-                <div class="panel">
-                    <h3 class="panel-heading" style="margin-bottom: 0">
-                        Прикрепленные навыки
-                    </h3>
-                    <div class="panel-body">
-                        <table id="attachedSkills" class="table" width="100%" cellspacing="0">
-                        </table>
                     </div>
                 </div>
 
-                <div class="panel">
-                    <h3 class="panel-heading" style="margin-bottom: 0">
-                        Тригерные навыки
-                    </h3>
-                    <div class="panel-body">
-                        <table id="triggerSkills" class="table" width="100%" cellspacing="0">
-                        </table>
+                <div class="row masonry" id="personage_table">
+                    <div class="panel">
+                        <h3 class="panel-heading" style="margin-bottom: 0">
+                            Прикрепленные навыки
+                        </h3>
+                        <div class="panel-body">
+                            <table id="attachedSkills" class="table" width="100%" cellspacing="0">
+                            </table>
+                        </div>
                     </div>
-                </div>
 
-                <div class="panel">
-                    <h3 class="panel-heading" style="margin-bottom: 0">
-                        Врожденные особенности
-                    </h3>
-                    <div class="panel-body">
-                        <table id="inherents" class="table" width="100%" cellspacing="0">
-                        </table>
+                    <div class="panel">
+                        <h3 class="panel-heading" style="margin-bottom: 0">
+                            Тригерные навыки
+                        </h3>
+                        <div class="panel-body">
+                            <table id="triggerSkills" class="table" width="100%" cellspacing="0">
+                            </table>
+                        </div>
                     </div>
-                </div>
 
-                <div class="panel">
-                    <h3 class="panel-heading" style="margin-bottom: 0">
-                        Достоинства
-                    </h3>
-                    <div class="panel-body">
-                        <table id="merits" class="table" width="100%" cellspacing="0">
-                        </table>
+                    <div class="panel">
+                        <h3 class="panel-heading" style="margin-bottom: 0">
+                            Врожденные особенности
+                        </h3>
+                        <div class="panel-body">
+                            <table id="inherents" class="table" width="100%" cellspacing="0">
+                            </table>
+                        </div>
                     </div>
-                </div>
 
-                <div class="panel">
-                    <h3 class="panel-heading" style="margin-bottom: 0">
-                        Недостатки
-                    </h3>
-                    <div class="panel-body">
+                    <div class="panel">
+                        <h3 class="panel-heading" style="margin-bottom: 0">
+                            Достоинства
+                        </h3>
+                        <div class="panel-body">
+                            <table id="merits" class="table" width="100%" cellspacing="0">
+                            </table>
+                        </div>
+                    </div>
+
+                    <div class="panel">
+                        <h3 class="panel-heading" style="margin-bottom: 0">
+                            Недостатки
+                        </h3>
+                        <div class="panel-body">
                             <table id="flaws" class="table" width="100%" cellspacing="0">
                             </table>
+                        </div>
                     </div>
+
+
                 </div>
 
-
             </div>
-
-        </div>
         </div>
     </section>
 </div>
